--- a/index.html
+++ b/index.html
@@ -1,5 +1,51 @@
 <html>
+  <head>
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Tangerine"
+          rel="stylesheet">
+    <style>
+      body {
+	text-align: center;
+        font-family: 'Playfair Display', serif;
+      }
+
+      #monogram {
+        height: 500px;
+      }
+
+      p {
+        font-size: 250%;
+        padding: 0;
+        margin: 20px;
+      }
+
+      #msg .small {
+        font-size: 120%;
+      }
+
+      hr {
+        width: 50%;
+      }
+
+      .fancy {
+        font-family: 'Tangerine', cursive;
+        font-size: 365% !important;
+      }
+
+    </style>
+  </head>
   <body>
-    hello!
+    <img id='monogram' src='monogram.png' />
+
+    <p>June 3, 2018</p>
+
+    <hr/>
+
+    <div id='msg'>
+      <p>SAVE THE DATE</p>
+      <p class='small'>for the wedding of</p>
+      <p class='fancy'>Alex Crichton</p>
+      <p class='small'>and</p>
+      <p class='fancy'>Minh Le</p>
+    </div>
   </body>
 </html>
