--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
           rel="stylesheet">
     <style>
       body {
+        margin-top: 50px;
 	text-align: center;
         font-family: 'Playfair Display', serif;
       }
