--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       }
 
       #monogram {
-        height: 500px;
+        height: 450px;
       }
 
       p {
@@ -20,7 +20,7 @@
       }
 
       #msg .small {
-        font-size: 120%;
+        font-size: 100%;
       }
 
       .line {
@@ -30,7 +30,7 @@
 
       .fancy {
         font-family: 'Tangerine', cursive;
-        font-size: 365% !important;
+        font-size: 425% !important;
       }
 
     </style>
@@ -38,14 +38,14 @@
   <body>
     <img id='monogram' src='monogram.png' />
 
-    <p>June 3, 2018</p>
+    <p style='font-size:280%'>June 3, 2018</p>
 
     <div class='line'>
       <hr/>
     </div>
 
     <div id='msg'>
-      <p>SAVE THE DATE</p>
+      <p>Save the Date</p>
       <p class='small' style='margin:20px'>for the wedding of</p>
       <p class='fancy'>Alex Crichton</p>
       <p class='small' style='margin:0px;'>and</p>
