--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <img id='monogram' src='monogram.png' />
 
     <p style='font-size:280%'>June 3, 2018</p>
-
+    <p style='font-size:100%'> Des Moines, Iowa</p>
     <div class='line'>
       <hr/>
     </div>
