--- a/index.html
+++ b/index.html
@@ -39,13 +39,15 @@
     <img id='monogram' src='monogram.png' />
 
     <p style='font-size:280%'>June 3, 2018</p>
-    <p style='font-size:100%'> Des Moines, Iowa</p>
+    <p style='font-size:100%'> Des Moines, Iowa
+        &middot;
+        <a href='more-details.html'>more details</a></p>
     <div class='line'>
       <hr/>
     </div>
 
     <div id='msg'>
-      <p>Save the Date</p>
+      <p><a href='https://goo.gl/forms/d1ahfOmqaf4uagkx1'>RSVP</a></p>
       <p class='small' style='margin:20px'>for the wedding of</p>
       <p class='fancy'>Alex Crichton</p>
       <p class='small' style='margin:0px;'>and</p>
