--- a/hotel.html
+++ b/hotel.html
@@ -16,16 +16,15 @@
     </ul>
     </div>
 
-    <h1>Accomodations</h1>
+    <h1>Accommodations</h1>
     <p style='text-align:left'>
-      We have reserved a block of 15 rooms at the
+      We have reserved a block of 15 rooms for the nights of 06/02/18 and 06/03/18 at the
       <a href='https://www.holidayinn.com/hotels/us/en/west-des-moines/dsmwm/hoteldetail?qAdlt=1&qBrs=6c.hi.ex.rs.ic.cp.in.sb.cw.cv.ul.vn.ki.sp.nd.ct&qChld=0&qFRA=1&qGRM=0&qIta=99504425&qPSt=0&qRRSrt=rt&qRef=df&qRms=1&qRpn=1&qRpp=20&qSHp=1&qSmP=3&qSrt=sBR&qWch=0&srb_u=1&icdv=99504425&dp=true&glat=SEAR'>
         Holiday Inn &amp; Suites West Des Moines
       </a>
-      at a rate of $149/night. We won't be hosting any events at this location
-      so you'll need to arrange for transportation to/from the ceremony. If
-      you're interested in reserving a room here there's some information
-      below, but you're of course welcome to book your own accommodations too!
+      at a rate of $149/night. In order to get this rate, you must make a reservation before 05/02/18. Guests will need to make and pay for their own reservations by called 515-309-3900. Guests will need to arrange their own transportation from the hotel to the ceremony and reception. The hotel has a shuttle that will drive passengers from/to the airport and locations within a 3 mile radius of the hotel. If
+      you're interested in reserving a room, please review additional details provided by the hotel
+      below. Contact us if you want help making your reservation. You are welcome to book your own accommodations too!
     </p>
 
     <p style='text-align:left'>
@@ -39,6 +38,10 @@ Hotel shuttle is available 7am-10:45pm, to and from the airport (14 passenger).
 Please contact the hotel directly 48 hours in advance with number of guests
 &amp; flight times. If it is available, we will also transport guests within a
 3 miles radius of the hotel.
+        
+        Check in and check out time: 
+        
+        Rooms are guaranteed to be ready by 4:00 PM. Please inquire with the hotel directly if you want an early arrival time. Check out time is noon. 
       </blockquote>
     </p>
 
