--- a/schedule.html
+++ b/schedule.html
@@ -8,18 +8,28 @@
     <div id='menu'>
     <ul>
        <li><a href='index.html'><span>Home</span></a></li>
-       <li><a href='ceremony.html'><span>Ceremony</span></a></li>
-       <li class='active'><a href='reception.html'><span>Reception</span></a></li>
+       <li class='active'><a href='schedule.html'><span>Schedule</span></a></li>
+       <li><a href='dress.html'><span>Dress</span></a></li>
        <li><a href='hotel.html'><span>Hotel</span></a></li>
        <li class='last'><a href='https://goo.gl/forms/d1ahfOmqaf4uagkx1'>
            <span>RSVP</span></a></li>
     </ul>
     </div>
 
+    <h1>Ceremony</h1>
+    <dl>
+      <dt>Time</dt>
+      <dd>Late Afternoon (exact time TBD)</dd>
+      <dt>Location</dt>
+      <dd>
+        <a href='http://thetearoomdsm.com/'>The Tea Room</a><br/>
+        713 Walnut St.<br/>
+        Des Moines, IA
+      </dd>
+    </dl>
+
     <h1>Reception</h1>
     <dl>
-      <dt>Date</dt>
-      <dd>June 3, 2018</dd>
       <dt>Time</dt>
       <dd>after ceremony</dd>
       <dt>Caterer</dt>
@@ -33,7 +43,5 @@
         large gifts. Items like gifts cards are of course welcome!
       </dd>
     </dl>
-
   </body>
 </html>
-
