--- a/hotel.html
+++ b/hotel.html
@@ -8,8 +8,8 @@
     <div id='menu'>
     <ul>
        <li><a href='index.html'><span>Home</span></a></li>
-       <li><a href='ceremony.html'><span>Ceremony</span></a></li>
-       <li><a href='reception.html'><span>Reception</span></a></li>
+       <li><a href='schedule.html'><span>Schedule</span></a></li>
+       <li><a href='dress.html'><span>Dress</span></a></li>
        <li class='active'><a href='hotel.html'><span>Hotel</span></a></li>
        <li class='last'><a href='https://goo.gl/forms/d1ahfOmqaf4uagkx1'>
            <span>RSVP</span></a></li>
@@ -38,10 +38,10 @@ Hotel shuttle is available 7am-10:45pm, to and from the airport (14 passenger).
 Please contact the hotel directly 48 hours in advance with number of guests
 &amp; flight times. If it is available, we will also transport guests within a
 3 miles radius of the hotel.
-        
-        Check in and check out time: 
-        
-        Rooms are guaranteed to be ready by 4:00 PM. Please inquire with the hotel directly if you want an early arrival time. Check out time is noon. 
+
+        Check in and check out time:
+
+        Rooms are guaranteed to be ready by 4:00 PM. Please inquire with the hotel directly if you want an early arrival time. Check out time is noon.
       </blockquote>
     </p>
 
