--- a/dress.html
+++ b/dress.html
@@ -27,23 +27,27 @@
         dressing for warm weather for the afternoon, and possibly bringing a
         light jacket and umbrella for the evening.</strong>
       </dd>
+      <dt>General</dt>
+      <dd>
+        The bride prefers that you wear semi-formal clothing, with the understanding that you may not want to purchase new clothing to wear only once for this event. The bride will be happy shop for, and even purchase or rent, affordable clothing options that both suit your style and satisfy the dress code for the event.
+        That said, <strong>the minimum level of formality for clothing is business casual, please see below for details. </strong> If you have any questions or would like help with shopping/purchasing clothing,
+      please contact the bride. Feel free to send her photos of your potential
+      outfit and she will be happy to advise you!
+      </dd>
       <dt>Women's dress code</dt>
       <dd>
-        <strong>Ladies should wear one of the following: dress, skirt and blouse,
-        skirt suit, dress slacks and blouse, pant suit, or ao dai
-        (Vietnamese traditional dress).  The bride prefers that ladies wear
-        pastel colors, like
+        <strong>  Business Casual</strong>: blouse/button-up shirt with
+          slacks/khakis/skirt  </br> 
+    <strong> Semi-Formal: </strong> dress, ao dai (Vietnamese traditional dress), pant/skirt suit </br>
+    Skirt or dress length can be
+    either long or short.</br>
+<strong>Color</strong>: If possible, the bride prefers that ladies wear
+        light/pastel colors, like
 
         <a href='https://coolors.co/export/png/ffe2d1-e2f2c4-b5eafc-fffdbf-c3bbe2'>
-          this</a></strong>.
-Skirt or dress length can be
-        either long or short.
-         In order not to mirror the colors of
+          this</a>. In order not to mirror the colors of
         the wedding dress and the wedding party, we ask that ladies avoid
-        large blocks of white, ivory, and silver.
-
-      The bride prefers that ladies wear pastel colors, like
-bride also prefers that ladies additionally avoid large blocks of
+        large blocks of white, ivory, and silver. The bride also prefers that ladies additionally avoid large blocks of
               dark colors and red (like
 
 
@@ -79,9 +83,7 @@ The bride prefers that men wear suits, or a sports jacket with
 
       <dt>Questions?</dt>
       <dd>
-      If you have any questions or are unsure about the outfit you have chosen,
-      please contact the bride. Feel free to send her photos of your potential
-      outfit and she will be happy to advise you!
+      
       </dd>
     </dl>
 
