--- a/dress.html
+++ b/dress.html
@@ -29,12 +29,17 @@
       </dd>
       <dt>General</dt>
       <dd>
-        The bride prefers that you wear semi-formal clothing, with the understanding that you may not want to purchase new clothing to wear only once for this event. The bride will be happy shop for, and even purchase or rent, affordable clothing options that both suit your style and satisfy the dress code for the event.
-        That said, <strong>the minimum level of formality for clothing is business casual, please see below for details. </strong> If you have any questions or would like help with shopping/purchasing clothing,
-      please contact the bride. Feel free to send her photos of your potential
+        The bride prefers that you wear semi-formal clothing, with the understanding that you may not want to purchase new clothing to wear only once for this event. 
+      
+        That said, <strong>the minimum level of formality for clothing is business casual, please see below for details. </strong> </br>
+    Please do not wear jeans, shorts, or T-shirts. In order not to mirror the colors worn by the bride, the groom, and the wedding party, we ask that guests (with the exception of parents of the bride and groom) avoid large blocks of white, ivory, and
+    silver/light gray. Please avoid bold colors in general, like 
+<a href='https://coolors.co/export/png/d81bef-ea0725-59f213-1600aa-ff7f00'>this</a>, unless in small quantities for accent such as a tie, pocket square, or jewelry. </br>
+  The bride will be happy shop for, and even purchase or rent, affordable clothing options that both suit your style and satisfy the dress code for the event. If you have any questions or would like help with shopping/purchasing clothing,
+      please contact the bride. Feel free to email her photos of your potential
       outfit and she will be happy to advise you!
       </dd>
-      <dt>Women's dress code</dt>
+      <dt>Women</dt>
       <dd>
         <strong>  Business Casual</strong>: blouse/button-up shirt with
           slacks/khakis/skirt  </br> 
@@ -45,15 +50,7 @@
         light/pastel colors, like
 
         <a href='https://coolors.co/export/png/ffe2d1-e2f2c4-b5eafc-fffdbf-c3bbe2'>
-          this</a>. In order not to mirror the colors of
-        the wedding dress and the wedding party, we ask that ladies avoid
-        large blocks of white, ivory, and silver. The bride also prefers that ladies additionally avoid large blocks of
-              dark colors and red (like
-
-
-        <a href='https://coolors.co/export/png/320e3b-1e441e-10283f-f34213-280004'>this</a>
-        and
-        <a href='https://coolors.co/export/png/d81e5b-228d91-880d1e-d1d1d1-000000'>this</a>).
+          this</a>. Dark colors such as brown, navy, dark gray, etc, are fine for bottoms (pants, slacks, and skirts).
 
 <!--
 
@@ -67,23 +64,15 @@
         If you have questions though
         please just let us know!
 --></dd>
-      <dt>Men's dress code</dt>
+      <dt>Men</dt>
       <dd>
-The bride prefers that men wear suits, or a sports jacket with
-              dress slacks. <strong>A long sleeved button up shirt and long pants are
-              required</strong>. Please do not wear polos, short sleeves, or T-shirts.
-              Khakis are fine but not jeans or shorts. Ties are not required
-              but certainly welcome. <strong>Color: In order not to mirror the color of
-              the wedding party and the groom, we ask that men avoid light
-              gray/silver and black.</strong>
+        <strong> Business Casual: </strong> A long sleeved button up shirt and long pants/khakis/slacks </br>
+Please do not wear polos or short sleeves.</br>
+<strong>Semi-Formal</strong>: suit or sports jacket </br>
+Ties are not required but certainly welcome. </br>
 <!--
       In order not to mirror the color of the wedding party, we ask
           that men avoid light gray/silver suits.-->
-      </dd>
-
-      <dt>Questions?</dt>
-      <dd>
-      
       </dd>
     </dl>
 
