--- a/dress.html
+++ b/dress.html
@@ -31,10 +31,10 @@
       <dd>
         The bride prefers that you wear semi-formal clothing, with the understanding that you may not want to purchase new clothing to wear only once for this event. 
       
-        That said, <strong>the minimum level of formality for clothing is business casual, please see below for details. </strong> </br>
+        That said, <strong>the minimum level of formality for clothing is business casual, please see below for details. </strong> </br></br>
     Please do not wear jeans, shorts, or T-shirts. In order not to mirror the colors worn by the bride, the groom, and the wedding party, we ask that guests (with the exception of parents of the bride and groom) avoid large blocks of white, ivory, and
     silver/light gray. Please avoid bold colors in general, like 
-<a href='https://coolors.co/export/png/d81bef-ea0725-59f213-1600aa-ff7f00'>this</a>, unless in small quantities for accent such as a tie, pocket square, or jewelry. </br>
+<a href='https://coolors.co/export/png/d81bef-ea0725-59f213-1600aa-ff7f00'>this</a>, unless in small quantities for accent such as a tie, pocket square, or jewelry. </br></br>
   The bride will be happy shop for, and even purchase or rent, affordable clothing options that both suit your style and satisfy the dress code for the event. If you have any questions or would like help with shopping/purchasing clothing,
       please contact the bride. Feel free to email her photos of your potential
       outfit and she will be happy to advise you!
@@ -42,10 +42,10 @@
       <dt>Women</dt>
       <dd>
         <strong>  Business Casual</strong>: blouse/button-up shirt with
-          slacks/khakis/skirt  </br> 
-    <strong> Semi-Formal: </strong> dress, ao dai (Vietnamese traditional dress), pant/skirt suit </br>
+        slacks/khakis/skirt.  </br> </br>
+    <strong> Semi-Formal: </strong> dress, ao dai (Vietnamese traditional dress), pant/skirt suit. </br>
     Skirt or dress length can be
-    either long or short.</br>
+either long or short.</br></br>
 <strong>Color</strong>: If possible, the bride prefers that ladies wear
         light/pastel colors, like
 
@@ -66,10 +66,10 @@
 --></dd>
       <dt>Men</dt>
       <dd>
-        <strong> Business Casual: </strong> A long sleeved button up shirt and long pants/khakis/slacks </br>
-Please do not wear polos or short sleeves.</br>
-<strong>Semi-Formal</strong>: suit or sports jacket </br>
-Ties are not required but certainly welcome. </br>
+        <strong> Business Casual: </strong> A long sleeved button up shirt and long pants/khakis/slacks. </br>
+Please do not wear polos or short sleeves.</br></br>
+<strong>Semi-Formal</strong>: suit or sports jacket. </br>
+Ties are not required but certainly welcome. </br></br>
 <!--
       In order not to mirror the color of the wedding party, we ask
           that men avoid light gray/silver suits.-->
