--- a/dress.html
+++ b/dress.html
@@ -35,7 +35,7 @@
     Please do not wear jeans, shorts, or T-shirts. In order not to mirror the colors worn by the bride, the groom, and the wedding party, we ask that guests (with the exception of parents of the bride and groom) avoid large blocks of white, ivory, and
     silver/light gray. Please avoid bold colors in general, like 
 <a href='https://coolors.co/export/png/d81bef-ea0725-59f213-1600aa-ff7f00'>this</a>, unless in small quantities for accent such as a tie, pocket square, or jewelry. </br></br>
-  The bride will be happy shop for, and even purchase or rent, affordable clothing options that both suit your style and satisfy the dress code for the event. If you have any questions or would like help with shopping/purchasing clothing,
+  The bride will be happy help you shop for affordable clothing options that both suit your style and satisfy the dress code for the event. If you have any questions or would like help with shopping/purchasing clothing,
       please contact the bride. Feel free to email her photos of your potential
       outfit and she will be happy to advise you!
       </dd>
@@ -50,7 +50,7 @@ either long or short.</br></br>
         light/pastel colors, like
 
         <a href='https://coolors.co/export/png/ffe2d1-e2f2c4-b5eafc-fffdbf-c3bbe2'>
-          this</a>. Dark colors such as brown, navy, dark gray, etc, are fine for bottoms (pants, slacks, and skirts).
+          this</a>. Dark colors such as brown, navy, dark gray, etc, are fine for bottoms (pants, slacks, and skirts) but not for dresses.
 
 <!--
 
