--- a/dress.html
+++ b/dress.html
@@ -32,7 +32,7 @@
         The bride prefers that you wear semi-formal clothing, with the understanding that you may not want to purchase new clothing to wear only once for this event. 
       That said, <strong>the minimum level of formality for clothing is business casual, please see below for details. </strong> </br></br>
     
-  The bride will be happy help you shop for affordable clothing options that both suit your style and satisfy the dress code for the event. If you have any questions or would like help with shopping/purchasing clothing,
+  The bride will be happy help you shop for affordable clothing options that both suit your style and satisfy the dress code for the event. If you have any questions or would like help with shopping for clothing,
       please contact the bride. Feel free to email her photos of your potential
       outfit and she will be happy to advise you!
       <dt>What NOT to wear</dt>
