--- a/dress.html
+++ b/dress.html
@@ -38,7 +38,7 @@
       <dt>What NOT to wear</dt>
       <dd>
         Please do not wear jeans, shorts, or T-shirts. <strong>In order not to mirror the colors worn by the bride, the groom, and the wedding party, we ask that guests (with the exception of parents of the bride and groom) avoid large blocks of white, ivory, and
-    silver/light gray. <strong> If it is convenient, please avoid bold colors in general, like 
+    silver/light gray. </strong> If it is convenient, please avoid bold colors in general, like 
 <a href='https://coolors.co/export/png/d81bef-ea0725-59f213-1600aa-ff7f00'>this</a>, unless in small quantities for accent such as a tie, pocket square, floral patterns on clothing, or jewelry. </br></br>
       
       </dd>
