--- a/schedule.html
+++ b/schedule.html
@@ -33,14 +33,21 @@
       <dt>Time</dt>
       <dd>after ceremony</dd>
       <dt>Caterer</dt>
-      <dd><a href='https://www.miyabi9official.com/'>Miyabi 9</a> plus
-      others (TBD)</dd>
+      <dd>To Be Announced</dd>
       <dt>Location</dt>
-      <dd>TBD</dd>
+      <dd>To Be Announced D</dd>
       <dt>Gifts</dt>
       <dd>
-        We'll be moving states soon after the wedding so please no
-        large gifts. Items like gifts cards are of course welcome!
+        We will be relocating to Oregon in August, no gifts (especially large bulky gifts)
+        are necessary. Your attendance at our wedding is the only gift we want! 
+      </br></br>
+        If you truly want to give a gift, consider donating to the Animal Rescue League of Iowa by going to 
+        their <a href='https://www.arl-iowa.org/'> website</a>. 
+        They recently rescued 
+        <a href='https://www.desmoinesregister.com/story/news/crime-and-courts/2017/07/10/85-chickens-and-roosters-seized-suspected-east-des-moines-cockfighting-operation-arl-says/464194001/'>85 roosters</a> 
+        from a suspected cockfighting operation, so they could really use the help! Another animal shelter that the bride loves
+        is <a href='https://furryfriendsrefuge.org/>Furry Friends Refuge</a>. 
+        You can <a href='https://furryfriendsrefuge.org/donate/cat-sponsorships/'>sponsor</a> a cat to help them get adopted!
       </dd>
     </dl>
   </body>
