--- a/schedule.html
+++ b/schedule.html
@@ -35,7 +35,7 @@
       <dt>Caterer</dt>
       <dd>To Be Announced</dd>
       <dt>Location</dt>
-      <dd>To Be Announced D</dd>
+      <dd>To Be Announced</dd>
       <dt>Gifts</dt>
       <dd>
         We will be relocating to Oregon in August, no gifts (especially large bulky gifts)
@@ -46,7 +46,7 @@
         They recently rescued 
         <a href='https://www.desmoinesregister.com/story/news/crime-and-courts/2017/07/10/85-chickens-and-roosters-seized-suspected-east-des-moines-cockfighting-operation-arl-says/464194001/'>85 roosters</a> 
         from a suspected cockfighting operation, so they could really use the help! Another animal shelter that the bride loves
-        is <a href='https://furryfriendsrefuge.org/>Furry Friends Refuge</a>. 
+        is <a href='https://furryfriendsrefuge.org/'>Furry Friends Refuge</a>. 
         You can <a href='https://furryfriendsrefuge.org/donate/cat-sponsorships/'>sponsor</a> a cat to help them get adopted!
       </dd>
     </dl>
