--- a/schedule.html
+++ b/schedule.html
@@ -44,7 +44,7 @@
         If you truly want to give a gift, consider donating to the Animal Rescue League of Iowa by going to 
         their <a href='https://www.arl-iowa.org/'> website</a>. 
         They recently rescued 
-        <a href='https://www.desmoinesregister.com/story/news/crime-and-courts/2017/07/10/85-chickens-and-roosters-seized-suspected-east-des-moines-cockfighting-operation-arl-says/464194001/'>85 roosters</a> 
+        <a href='https://www.desmoinesregister.com/story/news/crime-and-courts/2017/07/10/85-chickens-and-roosters-seized-suspected-east-des-moines-cockfighting-operation-arl-says/464194001/'>85 chickens</a> 
         from a suspected cockfighting operation, so they could really use the help! Another animal shelter that the bride loves
         is <a href='https://furryfriendsrefuge.org/'>Furry Friends Refuge</a>. 
         You can <a href='https://furryfriendsrefuge.org/donate/cat-sponsorships/'>sponsor</a> a cat to help them get adopted!
