--- a/schedule.html
+++ b/schedule.html
@@ -38,7 +38,7 @@
       <dd>To Be Announced</dd>
       <dt>Gifts</dt>
       <dd>
-        We will be relocating to Oregon in August, no gifts (especially large bulky gifts)
+        Because we will be relocating to Oregon in August, no gifts (especially large bulky gifts)
         are necessary. Your attendance at our wedding is the only gift we want! 
       </br></br>
         If you truly want to give a gift, consider donating to the Animal Rescue League of Iowa by going to 
