--- a/schedule.html
+++ b/schedule.html
@@ -39,15 +39,19 @@
       <dt>Gifts</dt>
       <dd>
         Because we will be relocating to Oregon in August, no gifts (especially large bulky gifts)
-        are necessary. Your attendance at our wedding is the only gift we want! 
+        are required. We are not registered at any stores. Small gifts, checks, and cash are welcome (no gift cards please), but again,
+        your attendance at our wedding is the only gift we truly need. </br></br>
+        We would like to spread our happiness to those in need. 
+        If you do give us a cash or check, we would be happy to donate 50% of the gift to a charity of your choice. 
+  This is entirely optional and you do not need to feel obligated to name a charity. 
+  We certainly would still appreciate your gift in its entirety to help pay for our wedding and moving expenses.
+        
       </br></br>
-        If you truly want to give a gift, consider donating to the Animal Rescue League of Iowa by going to 
-        their <a href='https://www.arl-iowa.org/'> website</a>. 
-        They recently rescued 
-        <a href='https://www.desmoinesregister.com/story/news/crime-and-courts/2017/07/10/85-chickens-and-roosters-seized-suspected-east-des-moines-cockfighting-operation-arl-says/464194001/'>85 chickens</a> 
-        from a suspected cockfighting operation, so they could really use the help! Another animal shelter that the bride loves
-        is <a href='https://furryfriendsrefuge.org/'>Furry Friends Refuge</a>. 
-        You can <a href='https://furryfriendsrefuge.org/donate/cat-sponsorships/'>sponsor</a> a cat to help them get adopted!
+        If you do decide to help us pay it forward but is unsure what charity to choose, 
+the  <a href='https://www.arl-iowa.org/'> Animal Rescue League of Iowa (ARL)</a> and <a href='https://furryfriendsrefuge.org/'>Furry Friends Refuge</a> are two of the bride's favorite animal shelters. 
+She rescued her cat, Lana, from Furry Friends. 
+Lana is currently living happily at the home of the parents of the bride with Mai, another cat rescued from the ARL. 
+The wedding couple is currently living with Muffin, a Maltese mix also rescued from the ARL, and Yoshi the Yorkie Mix. Both dogs are, of course, spoiled rotten!
       </dd>
     </dl>
   </body>
