--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div id='msg'>
       <p class='small' style='margin:20px'>
        <a href='https://goo.gl/forms/d1ahfOmqaf4uagkx1'>
-           <span>RSVP</span></a>
+           <span>Please RSVP by April 15, 2018</span></a>
       for the wedding of</p>
       <p class='fancy'>Alex Crichton</p>
       <p class='small' style='margin:0px;'>and</p>
