--- a/schedule.html
+++ b/schedule.html
@@ -38,20 +38,22 @@
       <dd>To Be Announced</dd>
       <dt>Gifts</dt>
       <dd>
-        Because we will be relocating to Oregon in August, no gifts (especially large bulky gifts)
+        Because we will be relocating to Oregon later this year, no gifts (especially large bulky gifts)
         are required. We are not registered at any stores. Small gifts, checks, and cash are welcome (no gift cards please), but again,
         your attendance at our wedding is the only gift we truly need. </br></br>
         We would like to spread our happiness to those in need. 
         If you do give us a cash or check, we would be happy to donate 50% of the gift to a charity of your choice. 
-  This is entirely optional and you do not need to feel obligated to name a charity. 
-  We certainly would still appreciate your gift in its entirety to help pay for our wedding and moving expenses.
+  This is entirely optional, so please do not feel obligated to name a charity. 
+  We would still appreciate gift in its entirety to help pay for our wedding and moving expenses.
         
       </br></br>
-        If you do decide to help us pay it forward but is unsure what charity to choose, 
-the  <a href='https://www.arl-iowa.org/'> Animal Rescue League of Iowa (ARL)</a> and <a href='https://furryfriendsrefuge.org/'>Furry Friends Refuge</a> are two of the bride's favorite animal shelters. 
+        If you do decide to help us pay it forward, but is unsure what charity to choose, then the bride urges you to consider 
+her favorite animal shelters,<a href='https://www.arl-iowa.org/'> Animal Rescue League of Iowa (ARL)</a>
+and <a href='https://furryfriendsrefuge.org/'>Furry Friends Refuge</a>. 
 She rescued her cat, Lana, from Furry Friends. 
 Lana is currently living happily at the home of the parents of the bride with Mai, another cat rescued from the ARL. 
-The wedding couple is currently living with Muffin, a Maltese mix also rescued from the ARL, and Yoshi the Yorkie Mix. Both dogs are, of course, spoiled rotten!
+The wedding couple also adopted one of their two spoiled dogs, Muffin, from the ARL. </br></br></br></br>
+
       </dd>
     </dl>
   </body>
