--- a/schedule.html
+++ b/schedule.html
@@ -18,8 +18,8 @@
 
     <h1>Ceremony</h1>
     <dl>
-      <dt>Time</dt>
-      <dd>Late Afternoon (exact time TBD)</dd>
+      <dt>Tentative Time</dt>
+      <dd>4:00 PM</dd>
       <dt>Location</dt>
       <dd>
         <a href='http://thetearoomdsm.com/'>The Tea Room</a><br/>
@@ -31,30 +31,35 @@
     <h1>Reception</h1>
     <dl>
       <dt>Time</dt>
-      <dd>after ceremony</dd>
+      <dd>Immediately following the Ceremony</dd>
       <dt>Caterer</dt>
-      <dd>To Be Announced</dd>
+      <dd>Hy-Vee West Lakes</dd>
       <dt>Location</dt>
-      <dd>To Be Announced</dd>
-      <dt>Gifts</dt>
-      <dd>
-        Because we will be relocating to Oregon later this year, no gifts (especially large bulky gifts)
-        are required. We are not registered at any stores. Small gifts, checks, and cash are welcome (no gift cards please), but again,
-        your attendance at our wedding is the only gift we truly need. </br></br>
-        We would like to spread our happiness to those in need. 
-        If you do give us a cash or check, we would be happy to donate 50% of the gift to a charity of your choice. 
-  This is entirely optional, so please do not feel obligated to name a charity. 
-  We would still appreciate gift in its entirety to help pay for our wedding and moving expenses.
-        
-      </br></br>
-        If you do decide to help us pay it forward, but is unsure what charity to choose, then the bride urges you to consider 
-her favorite animal shelters,<a href='https://www.arl-iowa.org/'> Animal Rescue League of Iowa (ARL)</a>
-and <a href='https://furryfriendsrefuge.org/'>Furry Friends Refuge</a>. 
-She rescued her cat, Lana, from Furry Friends. 
-Lana is currently living happily at the home of the parents of the bride with Mai, another cat rescued from the ARL. 
-The wedding couple also adopted one of their two spoiled dogs, Muffin, from the ARL. </br></br></br></br>
-
-      </dd>
+      <dd>The Tea Room</dd>
     </dl>
+ <h1>Gift Giving</h1>
+<dl>
+  <dt>For the Bride and Groom</dt>
+  <dd>  Because we will be relocating to Oregon later this year, no gifts (especially large bulky gifts)
+        are necessary. We are not registered at any stores. Small gifts, checks, and cash are welcome (no gift cards please), but again,
+        your attendance at our wedding is the gift we truly appreciate the most.</dd>
+  <dt>Charitable Donations</dt>
+  <dd> The bride is passionate about philanthrophy and volunteering. 
+   We would like to spread the happiness at our wedding to those in need.
+   If you intend on giving us a monetary gift and would like to help us pay it forward,
+   we would be happy to donate a portion of your gift to a charity of your choice. <strong>This is entirely optional</strong>, and you certainly should not feel obligated to participate.
+   We would still appreciate your gift in its entirety to help pay for our wedding and moving expenses. 
+ </br></br>
+
+ If you would like to make a donation, please specify the name of a charity and the donation amount 
+  on the back of the gift envelope. If you are unsure of what charity to choose, 
+then the bride readily suggests that you consider her two favorite animal shelters, 
+  Animal Rescue League of Iowa (ARL) and Furry Friends Refuge.
+The bride has a cat named Lana that she adopted from Furry Friends. 
+  Lana is currently living happily at the home of the bride's parents along with Mai, 
+  a cat the bride's parents adopted from the ARL when the bride left the home to attend college out of state.
+  The wedding couple also adopted one of their two spoiled dogs, Muffin, from the ARL. 
+  </dd>
+  </dl>
   </body>
 </html>
