--- a/schedule.html
+++ b/schedule.html
@@ -38,7 +38,7 @@
     </dl>
     <br/>
  <h1>Gift Giving</h1>
-<dl>
+<dl style='float:left'>
   <dt>For the Bride and Groom</dt>
   <dd>  Because we will be relocating to Oregon later this year, no gifts (especially large bulky gifts)
         are necessary. We are not registered at any stores. Small gifts, checks, and cash are welcome (no gift cards please), but again,
