--- a/schedule.html
+++ b/schedule.html
@@ -16,7 +16,7 @@
     </div>
 
     <h1>Ceremony</h1>
-    <dl>
+<dl style='float:left'>
       <dt>Tentative Time</dt>
       <dd>4:00 PM</dd>
       <dt>Location</dt>
@@ -28,7 +28,7 @@
     </dl>
 
     <h1>Reception</h1>
-    <dl>
+<dl style='float:left'>
       <dt>Time</dt>
       <dd>Immediately following the Ceremony</dd>
       <dt>Caterer</dt>
