--- a/schedule.html
+++ b/schedule.html
@@ -17,13 +17,37 @@
 
     <h1>Ceremony</h1>
 <dl style='float:left'>
-      <dt>Tentative Time</dt>
-      <dd>4:00 PM</dd>
-      <dt>Location</dt>
+      <dt>Start Time</dt>
+      <dd>4:00pm, doors open at 3:30pm</dd>
+      <dt>Address</dt>
       <dd>
         <a href='http://thetearoomdsm.com/'>The Tea Room</a><br/>
         713 Walnut St.<br/>
-        Des Moines, IA
+        Des Moines, IA<br/>
+        <a href='https://www.google.com/maps/place/The+Tea+Room/@41.5857849,-93.6271062,19z/data=!3m1!4b1!4m5!3m4!1s0x87ee990188d62d6d:0x395c288f573ae4ef!8m2!3d41.5857839!4d-93.626559'>
+          (map)
+        </a>
+      </dd>
+      <dt>Location</dt>
+      <dd>
+        The Tea Room is located on the 6th floor of the Wilkins building and
+        is accessible by elevator. The <a href='https://www.google.com/maps/place/Partnership+Parking/@41.585795,-93.6272483,3a,49.8y,66.16h,85.18t/data=!3m6!1e1!3m4!1sJyc_YQu-w2Wryz37Pr-TFw!2e0!7i13312!8i6656!4m12!1m6!3m5!1s0x87ee990188d62d6d:0x395c288f573ae4ef!2sThe+Tea+Room!8m2!3d41.5857839!4d-93.626559!3m4!1s0x87ee99022c1da9b3:0x4ea025ca479a4887!8m2!3d41.5860629!4d-93.6271238'>
+          street entrance</a> is on 8th street
+        between Walnut and Locust.
+      </dd>
+      <dt>Parking</dt>
+      <dd>
+        Adjacent to the Tea Room there is <a href='https://www.google.com/maps/place/Partnership+Parking/@41.5859992,-93.627189,19.88z/data=!4m12!1m6!3m5!1s0x87ee990188d62d6d:0x395c288f573ae4ef!2sThe+Tea+Room!8m2!3d41.5857839!4d-93.626559!3m4!1s0x87ee99022c1da9b3:0x4ea025ca479a4887!8m2!3d41.5860629!4d-93.6271238'>
+          Partnership Parking</a>, a parking garage accessible from
+
+        <a href='https://www.google.com/maps/place/Partnership+Parking/@41.5863636,-93.6271138,3a,75y,160.91h,84.88t/data=!3m6!1e1!3m4!1s4MbokKjKo8TOQ6Ra-Dh5XA!2e0!7i13312!8i6656!4m12!1m6!3m5!1s0x87ee990188d62d6d:0x395c288f573ae4ef!2sThe+Tea+Room!8m2!3d41.5857839!4d-93.626559!3m4!1s0x87ee99022c1da9b3:0x4ea025ca479a4887!8m2!3d41.5860629!4d-93.6271238'>
+          Locust St</a>. On the corner of 9th and Locust there is
+        <a href='https://www.google.com/maps/place/800+Walnut,+Wells+Fargo/@41.586212,-93.6280003,3a,75y,6.55h,77.02t/data=!3m6!1e1!3m4!1sbNEBMXfK_JzN0xI7QWTHzg!2e0!7i13312!8i6656!4m12!1m6!3m5!1s0x87ee990188d62d6d:0x395c288f573ae4ef!2sThe+Tea+Room!8m2!3d41.5857839!4d-93.626559!3m4!1s0x87ee99024a23a003:0xb286b273d45afbfa!8m2!3d41.5862264!4d-93.6282067'>
+          another parking garage</a> and you can access the Tea Room by walking
+        through the Skywalk. We're currently looking into whether these parking
+        garages charge on Sundays and will update this when we've got the
+        information. Street parking on Sundays is also free in Des
+        Moines.
       </dd>
     </dl>
 
