--- a/schedule.html
+++ b/schedule.html
@@ -21,7 +21,7 @@
       <dd>4:00pm, doors open at 3:30pm</dd>
       <dt>Address</dt>
       <dd>
-        <a href='http://thetearoomdsm.com/'>The Tea Room</a><br/>
+        <a href='http://thetearoomdsm.com/'>The Tea Room (Jubilee Room)</a><br/>
         713 Walnut St.<br/>
         Des Moines, IA<br/>
         <a href='https://www.google.com/maps/place/The+Tea+Room/@41.5857849,-93.6271062,19z/data=!3m1!4b1!4m5!3m4!1s0x87ee990188d62d6d:0x395c288f573ae4ef!8m2!3d41.5857839!4d-93.626559'>
@@ -45,9 +45,7 @@
         <a href='https://www.google.com/maps/place/800+Walnut,+Wells+Fargo/@41.586212,-93.6280003,3a,75y,6.55h,77.02t/data=!3m6!1e1!3m4!1sbNEBMXfK_JzN0xI7QWTHzg!2e0!7i13312!8i6656!4m12!1m6!3m5!1s0x87ee990188d62d6d:0x395c288f573ae4ef!2sThe+Tea+Room!8m2!3d41.5857839!4d-93.626559!3m4!1s0x87ee99024a23a003:0xb286b273d45afbfa!8m2!3d41.5862264!4d-93.6282067'>
           another parking garage</a> and you can access the Tea Room by walking
         through the Skywalk. We're currently looking into whether these parking
-        garages charge on Sundays and will update this when we've got the
-        information. Street parking on Sundays is also free in Des
-        Moines.
+        garages charge on Sundays and will update this website when we find out. Street parking on Sundays is free.
       </dd>
     </dl>
 
@@ -58,7 +56,7 @@
       <dt>Caterer</dt>
       <dd>Hy-Vee West Lakes</dd>
       <dt>Location</dt>
-      <dd>The Tea Room</dd>
+      <dd>The Tea Room (Garden Room)</dd>
     </dl>
     <br/>
  <h1>Gift Giving</h1>
