--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <ul>
        <li class='active'><a href='index.html'><span>Home</span></a></li>
        <li><a href='schedule.html'><span>Schedule</span></a></li>
+       <li><a href='gifts.html'><span>Gifts</span></a></li>
        <li><a href='dress.html'><span>Dress</span></a></li>
        <li class='last'><a href='https://goo.gl/forms/d1ahfOmqaf4uagkx1'>
            <span>RSVP</span></a></li>
