--- a/schedule.html
+++ b/schedule.html
@@ -9,6 +9,7 @@
     <ul>
        <li><a href='index.html'><span>Home</span></a></li>
        <li class='active'><a href='schedule.html'><span>Schedule</span></a></li>
+       <li><a href='gifts.html'><span>Gifts</span></a></li>
        <li><a href='dress.html'><span>Dress</span></a></li>
        <li class='last'><a href='https://goo.gl/forms/d1ahfOmqaf4uagkx1'>
            <span>RSVP</span></a></li>
@@ -59,29 +60,5 @@
       <dd>The Tea Room (Garden Room)</dd>
     </dl>
     <br/>
- <h1>Gift Giving</h1>
-<dl style='float:left'>
-  <dt>For the Bride and Groom</dt>
-  <dd>  Because we will be relocating to Oregon later this year, no gifts (especially large bulky gifts)
-        are necessary. We are not registered at any stores. Small gifts, checks, and cash are welcome (no gift cards please), but again,
-        your attendance at our wedding is the gift we truly appreciate the most.</dd>
-  <dt>Charitable Donations</dt>
-  <dd> The bride is passionate about philanthrophy and volunteering.
-   We would like to spread the happiness at our wedding to those in need.
-   If you intend on giving us a monetary gift and would like to help us pay it forward,
-   we would be happy to donate a portion of your gift to a charity of your choice. <strong>This is entirely optional</strong>, and you certainly should not feel obligated to participate.
-   We would still appreciate your gift in its entirety to help pay for our wedding and moving expenses.
- </br></br>
-
- If you would like to make a donation, please specify the name of a charity and the donation amount
-  on the back of the gift envelope. If you are unsure of what charity to choose,
-then the bride readily suggests that you consider her two favorite animal shelters,
-  Animal Rescue League of Iowa (ARL) and Furry Friends Refuge.
-The bride has a cat named Lana that she adopted from Furry Friends.
-  Lana is currently living happily at the home of the bride's parents along with Mai,
-  a cat the bride's parents adopted from the ARL when the bride left the home to attend college out of state.
-  The wedding couple also adopted one of their two spoiled dogs, Muffin, from the ARL.
-  </dd>
-  </dl>
   </body>
 </html>
