--- a/schedule.html
+++ b/schedule.html
@@ -51,13 +51,29 @@
     </dl>
 
     <h1>Reception</h1>
-<dl style='float:left'>
+    <dl style='float:left'>
       <dt>Time</dt>
       <dd>Immediately following the Ceremony</dd>
       <dt>Caterer</dt>
       <dd>Hy-Vee West Lakes</dd>
       <dt>Location</dt>
       <dd>The Tea Room (Garden Room)</dd>
+      <dt>Style</dt>
+      <dd>
+        The reception will be a tapas (small plates) buffet.
+      </dd>
+      <dt>Menu</dt>
+      <dd>
+        <ul>
+          <li>Roast Beef Crostini with Roasted Red Pepper</li>
+          <li>Pacific Rim Turkey Meatballs</li>
+          <li>Portabella Mushroom Au Poivre (vegetarian)</li>
+          <li>Roasted Brussels Sprouts w/ Bacon (optional), Balsamic and
+            Parmesan (vegetarian w/o bacon)</li>
+          <li>Boursin-Stuffed Peppadew Peppers (vegetarian)</li>
+          <li>Blistered Tomato Pasta (vegetarian)</li>
+        </ul>
+      </dd>
     </dl>
     <br/>
   </body>
