--- a/schedule.html
+++ b/schedule.html
@@ -42,11 +42,14 @@
           Partnership Parking</a>, a parking garage accessible from
 
         <a href='https://www.google.com/maps/place/Partnership+Parking/@41.5863636,-93.6271138,3a,75y,160.91h,84.88t/data=!3m6!1e1!3m4!1s4MbokKjKo8TOQ6Ra-Dh5XA!2e0!7i13312!8i6656!4m12!1m6!3m5!1s0x87ee990188d62d6d:0x395c288f573ae4ef!2sThe+Tea+Room!8m2!3d41.5857839!4d-93.626559!3m4!1s0x87ee99022c1da9b3:0x4ea025ca479a4887!8m2!3d41.5860629!4d-93.6271238'>
-          Locust St</a>. On the corner of 9th and Locust there is
+          Locust St</a> which requires payment to park. On the corner of 9th
+        and Locust there is
         <a href='https://www.google.com/maps/place/800+Walnut,+Wells+Fargo/@41.586212,-93.6280003,3a,75y,6.55h,77.02t/data=!3m6!1e1!3m4!1sbNEBMXfK_JzN0xI7QWTHzg!2e0!7i13312!8i6656!4m12!1m6!3m5!1s0x87ee990188d62d6d:0x395c288f573ae4ef!2sThe+Tea+Room!8m2!3d41.5857839!4d-93.626559!3m4!1s0x87ee99024a23a003:0xb286b273d45afbfa!8m2!3d41.5862264!4d-93.6282067'>
-          another parking garage</a> and you can access the Tea Room by walking
-        through the Skywalk. We're currently looking into whether these parking
-        garages charge on Sundays and will update this website when we find out. Street parking on Sundays is free.
+          another parking garage</a> which charges $1.00 an hour, and you can
+        access the Tea Room by walking through the Skywalk. One and a half
+        blocks away there is a <a href='https://www.google.com/maps/place/Wells+Fargo/@41.5843794,-93.6270897,3a,75y,191.6h,85.76t/data=!3m6!1e1!3m4!1sMcXl8Npbd4D1BrsJx0_5yw!2e0!7i13312!8i6656!4m12!1m6!3m5!1s0x87ee990188d62d6d:0x395c288f573ae4ef!2sThe+Tea+Room!8m2!3d41.5857839!4d-93.626559!3m4!1s0x87ee98fdfecc34d3:0x5abcde989532a5de!8m2!3d41.5838451!4d-93.6271472'>
+          free parking garage from Wells Fargo</a> accessible from either
+        Mulberry or Cherry st. Finally, street parking on Sundays is free.
       </dd>
     </dl>
 
