--- a/schedule.html
+++ b/schedule.html
@@ -65,7 +65,7 @@
       <dd>
         The reception will be a tapas (small plates) buffet.
       </dd>
-      <dt>Menu</dt>
+      <dt>Entrees</dt>
       <dd>
         <ul>
           <li>Roast Beef Crostini with Roasted Red Pepper</li>
@@ -75,6 +75,14 @@
             Parmesan (vegetarian w/o bacon)</li>
           <li>Boursin-Stuffed Peppadew Peppers (vegetarian)</li>
           <li>Blistered Tomato Pasta (vegetarian)</li>
+        </ul>
+      </dd>
+       <dt>Dessert</dt>
+      <dd>
+        <ul>
+          <li>Various flavors of Gelato from <a href= 'https://stamchocolate.com/'>Chocolaterie Stam</a></li>
+          <li>Butter Pecan and Chocolate Marbled Wedding Cake with Butter Cream Frosting by 
+            <a href= '>http://www.letthemeatcakeiowa.com/home/'>Let Them Eat Cake</a></li>
         </ul>
       </dd>
     </dl>
