--- a/schedule.html
+++ b/schedule.html
@@ -71,8 +71,8 @@
           <li>Roast Beef Crostini with Roasted Red Pepper</li>
           <li>Pacific Rim Turkey Meatballs</li>
           <li>Portabella Mushroom Au Poivre (vegetarian)</li>
-          <li>Roasted Brussels Sprouts w/ Bacon (optional), Balsamic and
-            Parmesan (vegetarian w/o bacon)</li>
+          <li>Roasted Brussels Sprouts with Bacon, Balsamic and
+            Parmesan (vegetarian without bacon)</li>
           <li>Boursin-Stuffed Peppadew Peppers (vegetarian)</li>
           <li>Blistered Tomato Pasta (vegetarian)</li>
         </ul>
