--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         }
 
       #monogram {
-        height: 450px;
+        height: 350px;
       }
 
       p {
@@ -46,8 +46,15 @@
            <span>RSVP</span></a></li>
     </ul>
     </div>
-
-    <img id='monogram' src='monogram.png' />
+      <div id='msg'>
+      <p class='small' style='margin:20px'>
+    
+           Please join us in celebrating the wedding of</p>
+      <p class='fancy'>Alex Crichton</p>
+      <p class='small' style='margin:0px;'>and</p>
+      <p class='fancy'>Minh Le</p>
+    </div>
+    <img id='monogram' alt='wedding monogram' src='monogram.png' />
 
     <p style='font-size:280%'>June 3, 2018</p>
     <p style='font-size:100%'> Des Moines, Iowa</p>
@@ -56,15 +63,7 @@
       <hr/>
     </div>
 
-    <div id='msg'>
-      <p class='small' style='margin:20px'>
-       <a href='https://goo.gl/forms/d1ahfOmqaf4uagkx1'>
-           <span>Please RSVP by May 10, 2018</span></a>
-      for the wedding of</p>
-      <p class='fancy'>Alex Crichton</p>
-      <p class='small' style='margin:0px;'>and</p>
-      <p class='fancy'>Minh Le</p>
-    </div>
+   
 
   </body>
 </html>
