--- a/schedule.html
+++ b/schedule.html
@@ -18,6 +18,8 @@
 <dl style='float:left'>
       <dt>Start Time</dt>
       <dd>4:00pm, doors open at 3:30pm</dd>
+   <dt>Duration</dt>
+  <dd>30 to 45 minutes</dd>
       <dt>Address</dt>
       <dd>
         <a href='http://thetearoomdsm.com/'>The Tea Room (Jubilee Room)</a><br/>
@@ -54,7 +56,7 @@
     <h1>Reception</h1>
     <dl style='float:left'>
       <dt>Time</dt>
-      <dd>Immediately following the Ceremony</dd>
+      <dd>Immediately after Ceremony ends until 7:30 PM</dd>
       <dt>Caterer</dt>
       <dd>Hy-Vee West Lakes</dd>
       <dt>Location</dt>
