--- a/schedule.html
+++ b/schedule.html
@@ -77,6 +77,13 @@
           <li>Blistered Tomato Pasta (vegetarian)</li>
         </ul>
       </dd>
+      <dt>Drinks</dt>
+      <dd>
+        There will be a cash bar at The Tea Room. Your first drink is on us! We
+        will provide a drink ticket for you to redeem your free drink at the bar.
+        If you intend on purchasing a alcoholic drink, the bartender may request
+        to see your ID, so keep that nearby.
+      </dd>
        <dt>Dessert</dt>
       <dd>
         <ul>
